// suppress inspection "AsciiDocLinkResolve" for whole file
[[whats-new]]
= What's New
:page-section-summary-toc: 1

[[changes-in-3-1-since-3-0]]
== Changes in 3.1 Since 3.0

[[java-17-spring-framework-6-1]]
=== Java 17, Spring Framework 6.1

This version requires Spring Framework 6.1 and Java 17.

[[x31-exc]]
=== Exclusive Consumer Logging

Log messages reporting access refusal due to exclusive consumers are now logged at DEBUG level by default.
It remains possible to configure your own logging behavior by setting the `exclusiveConsumerExceptionLogger` and `closeExceptionLogger` properties on the listener container and connection factory respectively.
In addition, the `SimpleMessageListenerContainer` consumer restart after such an exception is now logged at DEBUG level by default (previously INFO).
A new method `logRestart()` has been added to the `ConditionalExceptionLogger` to allow this to be changed.
See xref:amqp/receiving-messages/consumer-events.adoc[Consumer Events] and <<channel-close-logging>> for more information.

==== `@AbstractConnectionFactory` Changes
A new property `connectionCreatingBackOff` allows to create `SimpleConnection` with backoff policy to support for retry mechanism at the connection level for creating channels to avoid the exception in connection module
