@@ -1,13 +1,17 @@
 /*
  * Copyright 2002-2024 the original author or authors.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the
- * License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- * https://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
- * CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package org.springframework.amqp.rabbit.connection;
@@ -15,17 +19,20 @@ package org.springframework.amqp.rabbit.connection;
 import java.io.IOException;
 import java.net.InetAddress;
 
+import javax.annotation.Nullable;
+
 import org.springframework.amqp.AmqpResourceNotAvailableException;
 import org.springframework.amqp.AmqpTimeoutException;
 import org.springframework.amqp.rabbit.support.RabbitExceptionTranslator;
 import org.springframework.util.ObjectUtils;
+import org.springframework.util.backoff.BackOffExecution;
 
 import com.rabbitmq.client.AlreadyClosedException;
 import com.rabbitmq.client.BlockedListener;
 import com.rabbitmq.client.Channel;
 import com.rabbitmq.client.impl.NetworkConnection;
 import com.rabbitmq.client.impl.recovery.AutorecoveringConnection;
-import org.springframework.util.backoff.BackOffExecution;
+
 
 /**
  * Simply a Connection.
@@ -46,13 +53,21 @@ public class SimpleConnection implements Connection, NetworkConnection {
 
 	private BackOffExecution backOffExecution;
 
-	public SimpleConnection(com.rabbitmq.client.Connection delegate, int closeTimeout) {
-		this(delegate, closeTimeout, null);
-
+	public SimpleConnection(com.rabbitmq.client.Connection delegate,
+							int closeTimeout) {
+		this.delegate = delegate;
+		this.closeTimeout = closeTimeout;
 	}
 
+	/**
+	 * Construct an instance with the {@link org.springframework.util.backoff.BackOffExecution} arguments.
+	 * @param delegate delegate connection
+	 * @param closeTimeout the time of physical close time out
+	 * @param backOffExecution backOffExecution is nullable
+	 * @since 3.1.3
+	 */
 	public SimpleConnection(com.rabbitmq.client.Connection delegate, int closeTimeout,
-			BackOffExecution backOffExecution) {
+	@Nullable BackOffExecution backOffExecution) {
 		this.delegate = delegate;
 		this.closeTimeout = closeTimeout;
 		this.backOffExecution = backOffExecution;
@@ -62,8 +77,8 @@ public class SimpleConnection implements Connection, NetworkConnection {
 	public Channel createChannel(boolean transactional) {
 		try {
 			Channel channel = this.delegate.createChannel();
-			while (channel == null && backOffExecution != null) {
-				long interval = backOffExecution.nextBackOff();
+			while (channel == null && this.backOffExecution != null) {
+				long interval = this.backOffExecution.nextBackOff();
 				if (interval == BackOffExecution.STOP) {
 					break;
 				}
@@ -105,17 +120,16 @@ public class SimpleConnection implements Connection, NetworkConnection {
 
 	/**
 	 * True if the connection is open.
-	 * 
 	 * @return true if the connection is open
 	 * @throws AutoRecoverConnectionNotCurrentlyOpenException if the connection is an
-	 * {@link AutorecoveringConnection} and is currently closed; this is required to prevent
-	 * the {@link CachingConnectionFactory} from discarding this connection and opening a new
-	 * one, in which case the "old" connection would eventually be recovered and orphaned -
-	 * also any consumers belonging to it might be recovered too and the broker will deliver
-	 * messages to them when there is no code actually running to deal with those messages
-	 * (when using the {@code SimpleMessageListenerContainer}). If we have actually closed the
-	 * connection (e.g. via {@link CachingConnectionFactory#resetConnection()}) this will
-	 * return false.
+	 * {@link AutorecoveringConnection} and is currently closed; this is required to
+	 * prevent the {@link CachingConnectionFactory} from discarding this connection
+	 * and opening a new one, in which case the "old" connection would eventually be recovered
+	 * and orphaned - also any consumers belonging to it might be recovered too
+	 * and the broker will deliver messages to them when there is no code actually running
+	 * to deal with those messages (when using the {@code SimpleMessageListenerContainer}).
+	 * If we have actually closed the connection
+	 * (e.g. via {@link CachingConnectionFactory#resetConnection()}) this will return false.
 	 */
 	@Override
 	public boolean isOpen() {
@@ -124,6 +138,7 @@ public class SimpleConnection implements Connection, NetworkConnection {
 		}
 		return this.delegate != null && (this.delegate.isOpen());
 	}
+
 
 	@Override
 	public int getLocalPort() {
@@ -168,7 +183,9 @@ public class SimpleConnection implements Connection, NetworkConnection {
 
 	@Override
 	public String toString() {
-		return "SimpleConnection@" + ObjectUtils.getIdentityHexString(this) + " [delegate=" + this.delegate
-				+ ", localPort=" + getLocalPort() + "]";
+		return "SimpleConnection@"
+				+ ObjectUtils.getIdentityHexString(this)
+				+ " [delegate=" + this.delegate + ", localPort=" + getLocalPort() + "]";
 	}
+
 }
