@@ -298,6 +298,10 @@ The `ConnectionNameStrategy` for the publisher connection is the same as the pri
 Starting with version 1.7.7, an `AmqpResourceNotAvailableException` is provided, which is thrown when `SimpleConnection.createChannel()` cannot create a `Channel` (for example, because the `channelMax` limit is reached and there are no available channels in the cache).
 You can use this exception in the `RetryPolicy` to recover the operation after some back-off.
 
+Starting with version 3.1, The construct of `SimpleConnection` supports `BackOffExceution` to add retry policies when  `SimpleConnection.createChannel()` get an empty channel at the connection layer
+
+
+
 [[connection-factory]]
 == Configuring the Underlying Client Connection Factory
 
