@@ -20,6 +20,8 @@ In addition, the `SimpleMessageListenerContainer` consumer restart after such an
 A new method `logRestart()` has been added to the `ConditionalExceptionLogger` to allow this to be changed.
 See xref:amqp/receiving-messages/consumer-events.adoc[Consumer Events] and <<channel-close-logging>> for more information.
 
-==== `@AbstractConnectionFactory` Changes
-A new property `connectionCreatingBackOff` allows to create `SimpleConnection` with backoff policy to support for retry mechanism at the connection level for creating channels to avoid the exception in connection module
+=== blocked-connections-and-resource-constraints
+
+See xref:amqp/connections.adoc[Blocked Connections and Resource Constraints] and <<blocked-connections-and-resource-constraints>> for more information.
+
 
